--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -1,5 +1,17 @@
 .editor {
     text-align: start;
-    width: 50%;
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+}
+
+.editor-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.reset-button {
+    height: 50%;
 }
 
