--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,14 @@
     width: 100%;
     justify-content: space-between;
 }
+
+.App {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.run-button {
+    width: 100px;
+    margin-bottom: 20px;
+}
