Still implementing drag and drop

--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -1,8 +1,8 @@
 .editor {
-    text-align: start;
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
+    flex-grow: 1;
 }
 
 .editor-top {
