Fixed resize bar height

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     display: flex;
     width: 100%;
     position: relative;
+    margin-bottom: 20px;
 }
 
 .App {
@@ -23,12 +24,19 @@
 }
 
 .resize-bar {
-    width: 20px;
+    /*width: 20px;*/
     background-color: #000;
+    grid-row: 2 / 3;
+    height: 300px;
 }
 
 .resize-bar:hover {
     cursor: ew-resize;
+}
+
+.code-mirror {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
 }
 
 .code-mirror pre {
