--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -9,7 +9,7 @@
     display: grid;
     grid-template-columns: 20px 1fr;
     grid-template-rows: 50px 1fr;
-    width: 300px;
+    width: 100%;
 }
 
 .editor-top {
