--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
-    /*flex-grow: 1;*/
+    width: 100%;
 }
 
 .editor-with-bar {
