--- a/src/components/App.css
+++ b/src/components/App.css
@@ -13,6 +13,10 @@
     font-family: sans-serif;
 }
 
+.select-language {
+    align-self: end;
+}
+
 .run-button {
     width: 100px;
     margin-bottom: 20px;
