--- a/src/components/styles/Editor.css
+++ b/src/components/styles/Editor.css
@@ -7,8 +7,8 @@
 
 .editor-with-bar {
     display: grid;
-    grid-template-columns: 20px 1fr;
-    grid-template-rows: 50px 1fr;
+    grid-template-columns: 20px 10fr 1fr;
+    grid-template-rows: 50px 12fr 1fr;
     width: 100%;
 }
 
@@ -17,7 +17,11 @@
     justify-content: space-between;
     align-items: center;
     height: 50px;
-    grid-column: 1 / 3;
+    grid-column: 1 / 4;
+}
+
+.code-mirror {
+    grid-column: 2 / 4;
 }
 
 
@@ -30,5 +34,3 @@
     color: red;
     z-index: 20;
 }
-
-
